# EffectiveCpp

./: CMakeLists.txt  README.md
06-lambda/: CmakeLists.txt  test31.cpp  test32.cpp  test33.cpp  test34.cpp
07-concurrency/: CMakeLists.txt  test35.cpp  test36.cpp  test37.cpp  test38.cpp  test39.cpp  test40.cpp
