project(07-concurrency)

set(SRC_35 ${CMAKE_SOURCE_DIR}/07-concurrency/test35.cpp)
source_group_by_dir(SRC_35)
add_executable(test35 ${SRC_35})

set(SRC_36 ${CMAKE_SOURCE_DIR}/07-concurrency/test36.cpp)
source_group_by_dir(SRC_36)
add_executable(test36 ${SRC_36})

set(SRC_37 ${CMAKE_SOURCE_DIR}/07-concurrency/test37.cpp)
source_group_by_dir(SRC_37)
add_executable(test37 ${SRC_37})

set(SRC_38 ${CMAKE_SOURCE_DIR}/07-concurrency/test38.cpp)
source_group_by_dir(SRC_38)
add_executable(test38 ${SRC_38})

set(SRC_39 ${CMAKE_SOURCE_DIR}/07-concurrency/test39.cpp)
source_group_by_dir(SRC_39)
add_executable(test39 ${SRC_39})

set(SRC_40 ${CMAKE_SOURCE_DIR}/07-concurrency/test40.cpp)
source_group_by_dir(SRC_40)
add_executable(test40 ${SRC_40})